# vk_dialog_analysys

./: .gitignore  README.md  analyzer.py  app.py  backend.py  dialog_analysys.ipynb  frontend.py  main.py  pyproject.toml
pages/: app.py  dialog_analysis.py  friend_graph.py
tools/: analyzer.py  friend_graph_creator.py
