[tool.poetry]
name = "vk-dialog-analysys"
version = "0.1.0"
description = ""
authors = ["nosnic <nosilkin.n.d@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
vk-api = "^11.9.9"
fastapi = "^0.111.0"
streamlit = "^1.35.0"
plotly = "^5.22.0"
matplotlib = "^3.9.0"
streamlit-agraph = "^0.0.45"
nltk = "^3.8.1"
statsmodels = "^0.14.2"
wordcloud = "^1.9.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
